# skupper-example-hello-world

./: .plano.py  .planofile  Makefile  README.md  plano  skewer.yaml
.circleci/: config.yml
.github/workflows/: build-multiarch-backend.yml  build-multiarch-frontend.yml  main.yaml
ansible/: README.md  requirements.yml
ansible/kubernetes/: Makefile  README.md  inventory.yml  setup-kubernetes.yml  setup.yml  teardown-kubernetes.yml  test.yml  (+1 more)
backend/: .plano.py  .planofile  Containerfile  Dockerfile  Makefile  app.py  main.py
frontend/: .plano.py  .planofile  Containerfile  Dockerfile  Makefile  app.py  kubernetes.yaml  main.py
python/: plano  plano.py  run.py  skewer  skewer.py  skewer.strings  skewer.yaml  test.py
scripts/: common.py  plano.py  run  skewer.py  test-external  test-minikube  test-minikube-one-cluster  test-minikube-two-clusters  test.py  tests.py
service-from-other-ns/: .planofile  README.md  skewer.yaml
subrepos/skewer/subrepos/plano/: .gitrepo  Makefile  README.md  pyproject.toml  setup.py
subrepos/skewer/subrepos/plano/.github/workflows/: main.yaml
subrepos/skewer/subrepos/plano/python/: bullseye.py  plano.py  plano_tests.py
subrepos/skewer/subrepos/plano/scripts/: test-centos-8.dockerfile  test-ubuntu.dockerfile
subrepos/skewer/subrepos/plano/src/plano/: _tests.py  command.py  commands.py  main.py  test.py  tests.py
subrepos/skewer/subrepos/plano/src/plano/_testproject/: .plano.py
subrepos/skewer/subrepos/plano/src/plano/_testproject/src/chucker/: tests.py
subrepos/skewer/subrepos/plano/src/plano/testproject/: Planofile
(+55 files in other folders)
