[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "ssorj-plano"
version = "1.0.0"
authors = [ { name = "Justin Ross", email = "jross@apache.org" } ]
description = "Python functions for writing shell-style system scripts"
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [ "License :: OSI Approved :: Apache Software License" ]
requires-python = ">=3.7"
dependencies = [ "PyYAML" ]

[project.scripts]
plano = "plano.command:_main"
plano-test = "plano.test:_main"
plano-self-test = "plano._tests:main"

[project.urls]
"Homepage" = "https://github.com/ssorj/plano"
"Bug Tracker" = "https://github.com/ssorj/plano/issues"
